# propelai01

./: .accuracy_baseline.json  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  00Attachment 11 - RAC Request for Estimate_Draft_Annotated_Outline (2).docx  00Attachment 2 Placement Procedures_Annotated_Outline.docx  0Attachment 11 - RAC Request for Estimate_Draft_Annotated_Outline (3).docx  0RFP-15BF6242_ComplianceMatrix.xlsx  0RFP-431C399C_ComplianceMatrix.xlsx  0Solicitation - FA880625RB003_Annotated_Outline.docx  136C10B26Q0064_1_Annotated_Outline (2).docx  1FA880625RB003_AirForce_ComplianceMatrix (1).xlsx  1RFP-0D257679_ComplianceMatrix.xlsx  1RFP-6D54369C_ComplianceMatrix.xlsx  1_FA880625RB003_AirForce_ComplianceMatrix (1).xlsx  1va_RFP-DA550615_Annotated_Outline.docx  1va_RFP-DA550615_ComplianceMatrix.xlsx  2. Attachment 1 Price Quote Schedule Trudata .1765825116809.xlsx  2RFP-0229F21E_ComplianceMatrix.xlsx  2RFP-B20C3E8D_ComplianceMatrix.xlsx  36C10B26Q0064+0001.docx  36C10B26Q0064+0001_1.docx  36C10B26Q0064+ROISVIE.docx  36C10B26Q0064_1.docx  36C10B26Q0064_1_Annotated_Outline (1).docx  36C10B26Q0064_1_Annotated_Outline.docx  3RFP-A66C5F14_ComplianceMatrix.xlsx  3procedures in providing written objection to the u_Annotated_Outline.docx  401RFP-092C7508_Annotated_Outline.docx  43Attachment 1 Stament Of Work_Annotated_Outline.docx  43RFP-6E09B20B_ComplianceMatrix.xlsx  4RFP-F42523C2_ComplianceMatrix.xlsx  52Attachment 1 Stament Of Work_Annotated_Outline.docx  52RFP-6F2388C9_ComplianceMatrix.xlsx  53Attachment 1 Stament Of Work_Annotated_Outline.docx  53RFP-90731EBD_ComplianceMatrix.xlsx  54Attachment 1 Stament Of Work_Annotated_Outline.docx  54RFP-41773F20_ComplianceMatrix.xlsx  55Attachment 11 - RAC Request for Estimate_Draft_Annotated_Outline (3).docx  (+187 more)
.emergent/: emergent.yml  summary.txt
.github/workflows/: accuracy-tests.yml  test.yml
agents/: __init__.py  compliance_agent.py  drafting_agent.py  drafting_workflow.py  red_team_agent.py  strategy_agent.py
agents/chat/: __init__.py  rfp_chat_agent.py
agents/enhanced_compliance/: __init__.py  accuracy_audit.py  accuracy_auditor.py  agent.py  amendment_processor.py  annotated_outline_exporter.js  annotated_outline_exporter.py  best_practices_ctm.py  bundle_detector.py  company_library.py  content_injector.py  criteria_eval.py  ctm_data_models.py  ctm_extractor.py  ctm_integration.py  deduplication.py  document_correlator.py  document_structure.py  document_types.py  excel_export.py  excel_parser.py  extraction_models.py  extraction_validator.py  extractor.py  ground_truth_validator.py  gsa_parser.py  metadata_extractor.py  models.py  outline_generator.py  outline_orchestrator.py  parser.py  pdf_coordinate_extractor.py  (+23 more)
api/: __init__.py  checkpointing.py  config.py  database.py  db.py  email_service.py  library.py  main.py  main.py.bak  oasis_routes.py  server.py  trust_gate.py  vector_store.py
auth/: __init__.py  dependencies.py  jwt.py  middleware.py
checkpointing/: __init__.py  feedback.py  postgres_saver.py  trace_logger.py
core/: __init__.py  config.py  orchestrator.py  state.py
database/: __init__.py  connection.py  models.py  repositories.py
docs/: AS_BUILT_Annotated_Outline_Generator.md  AS_BUILT_PropelAI_v2.12.md  AS_BUILT_v2.12.md  AS_BUILT_v3.3.md  IMPLEMENTATION_PLAN_StrictStructureBuilder.md  IMPLEMENTATION_PLAN_v4.0.md  MASTER_ARCHITECT_PLAN.md  PRD_Annotated_Outline_Generator_Roadmap.md  PRD_PropelAI_v3.0_Roadmap.md  PRD_v3.0_Roadmap.md  REFACTORING_PLAN_v3.0.md  TECHNICAL_SPECIFICATION_v4.md
migrations/: README.md  env.py
parsing/: __init__.py  document_parser.py  pdf_parser.py
rag/: __init__.py  chunker.py  embeddings.py  ingestion.py  search.py
scripts/: check_accuracy_regression.py
storage/: __init__.py  client.py  models.py
swarm/: __init__.py  cmmc.py  flywheel.py  orchestrator.py  state.py
tests/: conftest.py  test_accuracy.py  test_agents.py  test_auth_v41.py  test_e2e_v4.py  test_resilient_extraction.py  test_structure_determinism.py
tools/: __init__.py  document_tools.py
validation/: ANNOTATION_GUIDELINES.md  __init__.py  matching.py  metrics.py  schemas.py
web/: demo.html  index.html
word-plugin/: README.md  manifest.xml  package.json  tsconfig.json  webpack.config.js
(+55 files in other folders)
